--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Kamal is vCard, Resume Template and Personal portfolio bootstrap 4 html template." />
+
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <!-- Title Of Site -->
@@ -113,7 +113,7 @@
                         <!-- Banner Text -->
                         <div class="banner-text ml-lg-5">
                             <h2>Hi There!</h2>
-                            <h3 class="d-sm-none d-block text-uppercase headline">I'M <b class="is-visible">kamal</b></h3>
+                            <h3 class="d-sm-none d-block text-uppercase headline">I'M <b class="is-visible">Nauman</b></h3>
                             <h3 class="d-sm-block d-none cd-headline clip text-uppercase">I'm
                                 <span class="cd-words-wrapper">
                                         <b class="is-visible">Nauman</b>
