--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                         <!-- End Portfolio Four -->
                         <!-- Portfolio Five -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-landing">
-                            <a href="./projects/NaTour using SCSS/index.html" target="_blank">
+                            <a href="https://natourscssweb.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/natour1000x800.png" class="img-fluid" alt="Portfolio 5" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -646,7 +646,7 @@
                         </div>
                         <!-- End Portfolio Six -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
-                            <a href="./projects/dashboard using js/dashboard-main/index.html" target="_blank">
+                            <a href="https://dashboardusingjs.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/dashboard1000x800.png" class="img-fluid" alt="Portfolio 1" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -665,7 +665,7 @@
 
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
-                            <a href="./projects/starbucks-landingPage-banner-main/index.html" target="_blank">
+                            <a href="https://starbucksslider.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/starbucks1000x800.png" class="img-fluid" alt="Portfolio 1" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -684,7 +684,7 @@
 
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
-                            <a href="./projects/Guess My Number Game using Javascript/index.html" target="_blank">
+                            <a href="https://jsguessmynumberjs.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/guess1000x800.png" class="img-fluid" alt="Portfolio 1" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -722,7 +722,7 @@
 
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
-                            <a href="./projects/Pig Game/index.html" target="_blank">
+                            <a href="https://jspiggamejs.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/piggame1000x800.png" class="img-fluid" alt="Portfolio 1" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -759,6 +759,28 @@
                         <!-- End Portfolio Two -->
 
 
+                        <!-- Portfolio Seven -->
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-landing">
+                            <a href="https://businesslandingpage122.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/businesslanding1000x800.png" class="img-fluid" alt="Portfolio 7" />
+                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Swan Lake</h4>
+                                            <p>Business Landing Page</p>
+                                            <!-- <div class="portfolio-links d-flex flex-row align-items-center justify-content-center">
+                                            <a class="fancylight gallery-popup-btn" data-fancybox-group="light" href="assets/images/portfolio/portfolio-1.jpg"><i
+                                                        class="fa fa-picture-o"></i></a>
+                                            <a class="portfolio-detail-popup" href="#portfolio-details-7"><i
+                                                        class="fa fa-link"></i></a>
+                                        </div> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+                        <!-- End Portfolio Seven -->
                         <!-- Portfolio Seven -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive">
                             <a href="https://thebullpen.pk/" target="_blank">
