--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                                     <h4>Hello! I'M <span>NAUMAN</span></h4>
                                     <p>I'm a Front-End Developer with a proven experience of 2+ years. I have worked on different technologies including HTML, CSS, SCSS, Bootstrap, Javascript, Jquery, ReactJS, NextJS and Wordpress. Using these technologies
                                         I have developed responsive webpages, landing pages, Responsive and different interactive webpages. </p>
-                                    <a class="mb-4 mb-lg-0 btn btn-primary" href="#"><span><i
-                                                    class="fa fa-download mr-2"></i>Download my cv</span></a>
+                                    <a class="mb-4 mb-lg-0 btn btn-primary" href="./nauman_cv.pdf" download="nauman_cv"><span><i class="fa fa-download mr-2"></i>Download my
+                                                cv</span></a>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
