--- a/index.html
+++ b/index.html
@@ -124,11 +124,16 @@
                             </h3>
                             <p>I'M UI/UX Developer with over 2+ years of experience. I create responsive web applications through carefully crafted design.</p>
                             <div class="social-links d-flex flex-wrap">
-                                <a href="#" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
-                                <a href="#" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Google plus"><i class="fa fa-google-plus"></i></a>
-                                <a href="#" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Instagram"><i class="fa fa-instagram"></i></a>
-                                <a href="#" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Linkedin"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/nouman-saleem-0b34941a1/" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Linkedin"><i
+                                            class="fa fa-linkedin"></i></a>
+                                <a href="https://github.com/NaumanSaleem22" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Github"><i
+                                            class="fa fa-github"></i></a>
+
+                                <a href="https://m.facebook.com/nouman.saleem.798" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Facebook"><i
+                                            class="fa fa-facebook"></i></a>
+                                <a href="https://twitter.com/highonatoms" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Twitter"><i
+                                            class="fa fa-twitter"></i></a>
+
                             </div>
                             <div class="info-button">
                                 <a href="#about" class="btn btn-secondary about-btn mr-sm-3"><span><i
