--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                 <div class="about-text">
                                     <h4>Hello! I'M <span>NAUMAN</span></h4>
-                                    <p>I'm a Front-End Developer with a proven experience of 2+ years. I have worked on different technologies including HTML, CSS, SCSS, Bootstrap, Javascript, Jquery, ReactJS, NextJS and Wordpress. Using these technologies
+                                    <p>I'm a Front-End Developer with a proven experience of 2+ years. I have worked on different technologies including HTML, CSS, SCSS, Bootstrap, Javascript, Jquery, ReactJS, NextJS and Wordpress. Using these technologies,
                                         I have developed responsive webpages, landing pages, Responsive and different interactive webpages. </p>
                                     <a class="mb-4 mb-lg-0 btn btn-primary" href="./nauman_cv.pdf" download="nauman_cv"><span><i class="fa fa-download mr-2"></i>Download my
                                                 cv</span></a>
@@ -243,7 +243,7 @@
                                             <span class="university d-inline-block mr-3"><i
                                                         class="fa fa-book mr-2"></i>Karachi Folk's High School</span>
                                             <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>Jan
-                                                    2003 - June 2014</span>
+                                                    2003 - June 2015</span>
                                         </div>
                                         <p class="box-description">Science <br /> A Grade
                                         </p>
