--- a/index.html
+++ b/index.html
@@ -534,6 +534,44 @@
                             </a>
                         </div>
                         <!-- End Portfolio Three -->
+                        <!-- Portfolio Three new -->
+                        <div
+                            class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-ecommerce">
+                            <a href="https://intranet-portal.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/intranetportla.png" class="img-fluid" alt="Portfolio 3"
+                                        style="height: 280px;object-fit: cover;" />
+                                    <div
+                                        class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Intranet Portal</h4>
+                                            <p>Intranet Portal Using ReactJS</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <!-- End Portfolio Three new -->
+                        <!-- Portfolio Three new -->
+                        <div
+                            class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-ecommerce">
+                            <a href="https://kz-lab-solutions.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/tammylabsolutions.png" class="img-fluid" alt="Portfolio 3"
+                                        style="height: 280px;object-fit: cover;" />
+                                    <div
+                                        class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>KZ Lab Solutions</h4>
+                                            <p>Website for Lab Inspections</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <!-- End Portfolio Three new -->
                         <!-- Portfolio Four -->
                         <div
                             class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive">
@@ -668,6 +706,44 @@
                             </a>
                         </div>
                         <!-- End Portfolio Six -->
+                        <!-- Portfolio Six new -->
+                        <div
+                            class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive">
+                            <a href="https://chat-gpt3-prac.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/chatgpt3.png" class="img-fluid" alt="Portfolio 6"
+                                        style="height: 280px;object-fit: cover;" />
+                                    <div
+                                        class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>ChatGPT3 Landing Page</h4>
+                                            <p>ChatGPT3 Landing Page on ReactJS</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <!-- End Portfolio Six new-->
+
+                        <!-- Portfolio Six New-->
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
+                            <a href="https://marinamallnauman.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/marinamall.png" class="img-fluid" alt="Portfolio 6"
+                                        style="height: 280px;object-fit: cover;" />
+                                    <div
+                                        class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Marina Mall</h4>
+                                            <p>Landing Page</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <!-- End Portfolio Six New-->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
                             <a href="https://dashboardusingjs.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
@@ -803,6 +879,25 @@
                                         <div class="portfolio-inner-info">
                                             <h4>The Bullpen</h4>
                                             <p>Coworking Space</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+                        <!-- End Portfolio Seven -->
+                        <!-- Portfolio Seven -->
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item">
+                            <a href="https://noonlandingprac.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/noon.png" class="img-fluid" alt="Portfolio 7"
+                                        style="height: 280px;object-fit: cover;" />
+                                    <div
+                                        class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Noon Landing Page (In Progress)</h4>
+                                            <p>Noon Store Landing Page on ReactJS</p>
 
                                         </div>
                                     </div>
