--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                                         <h5 class="box-title">Front-End Developer</h5>
                                         <div class="item-details mb-2 mb-sm-1">
                                             <span class="university d-inline-block mr-3"><i
-                                                    class="fa fa-book mr-2"></i>Centric </span>
-                                            <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>May
+                                                    class="fa fa-book mr-2"></i>Krystosoft </span>
+                                            <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>Nov
                                                 2022 -<span
                                                     class="badge badge-success current ml-2">Present</span></span>
                                         </div>
@@ -285,8 +285,8 @@
                                         <div class="item-details mb-2 mb-sm-1">
                                             <span class="university d-inline-block mr-3"><i
                                                     class="fa fa-book mr-2"></i>Designer Dev</span>
-                                            <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>Feb
-                                                2017 - May 2018</span>
+                                            <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>Aug
+                                                2021 - Nov 2022</span>
                                         </div>
                                         <p class="box-description">Collaborated with team members to implement different
                                             projects using different technologies like HTML, CSS, Bootstrap, Javascript,
@@ -298,8 +298,8 @@
                                         <div class="item-details mb-2 mb-sm-1">
                                             <span class="university d-inline-block mr-3"><i
                                                     class="fa fa-book mr-2"></i>Devnest</span>
-                                            <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>Sept
-                                                2016 - Nov 2017</span>
+                                            <span class="year d-inline-block"><i class="fa fa-calendar mr-2"></i>May
+                                                2021 - July 2021</span>
                                         </div>
                                         <p class="box-description"> Gained experience by working on different live
                                             projects. Managed and developed different projects including Ecommerce
