--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <!-- Title Of Site -->
-    <title>Nauman &ndash; Personal Portfolio</title>
+    <title>Nauman &ndash; Frontend Portfolio</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/master_favicon_thumbnail.png" />
 
