--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
                                 <div class="about-details clearfix">
                                     <ul class="float-left w-40 pr-2">
                                         <li class="mb-1"><span>Name :</span> <span>Nauman Saleem</span></li>
-                                        <li class="mb-1"><span>Birthdate :</span> <span>29 August 1999</span></li>
                                         <li class="mb-1"><span>Address :</span> <span>Karachi, Pakistan</span></li>
                                         <li class="mb-1"><span>Experience :</span> <span>2+ years</span></li>
                                         <li class="mb-1"><span>Freelance :</span> <span>Available</span></li>
@@ -972,7 +971,7 @@
                                     <div class="card-icon"><i class="fa fa-map-marker"></i></div>
                                     <div class="card-content ml-3">
                                         <h3>My Address</h3>
-                                        <p>House no. 220, Hyderabad Colony, Jail Road, Karachi, Pakistan</p>
+                                        <p> Pakistan</p>
                                     </div>
                                 </div>
                             </div>
