--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Preloader -->
     <div id="preloader" class="preloader active">
         <div class="preloader-inner">
-            <span class="sr-only">Loading...</span>
+            <span class="sr-only">Loadings...</span>
         </div>
     </div>
     <!-- End Preloader -->
