--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="logo navbar-brand p-0 m-0 w-100">
 
                             <!-- Text Logo -->
-                            <a class="text-logo" href="index.html">Nauman </a>
+                            <a class="text-logo" href="index.html">Naumans </a>
                             <!-- End Text Logo -->
                             <!-- Image Logo -->
                             <!-- <a href="index.html" class="logo-img"><img class="img-fluid" src="assets/images/logo.png" alt="logo" title="Logo" /></a> -->
@@ -531,7 +531,7 @@
                                 </div>
                             </a>
                         </div>
-                        
+
                         <div
                             class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive filter-ecommerce">
                             <a href="https://qa.sastatareen.pk/" target="_blank">
