--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="logo navbar-brand p-0 m-0 w-100">
 
                             <!-- Text Logo -->
-                            <a class="text-logo" href="index.html">Naumans </a>
+                            <a class="text-logo" href="index.html">Nauman </a>
                             <!-- End Text Logo -->
                             <!-- Image Logo -->
                             <!-- <a href="index.html" class="logo-img"><img class="img-fluid" src="assets/images/logo.png" alt="logo" title="Logo" /></a> -->
@@ -178,8 +178,9 @@
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                 <div class="about-text">
                                     <h4>Hello! I'M <span>NAUMAN</span></h4>
-                                    <p>I'm a Front-End Developer with a proven experience of 2+ years. I have worked on
-                                        different technologies including HTML, CSS, SCSS, Bootstrap, Javascript, Jquery,
+                                    <p>I'm a Front-End Developer with a proven experience of 4+ years. I have worked on
+                                        different technologies including HTML, CSS, SCSS, Bootstrap, Javascript,
+                                        Jquery,Angular, Odoo Websites
                                         ReactJS, NextJS and Wordpress. Using these technologies,
                                         I have developed responsive webpages, landing pages, Responsive and different
                                         interactive webpages. </p>
@@ -193,7 +194,7 @@
                                     <ul class="float-left w-40 pr-2">
                                         <li class="mb-1"><span>Name :</span> <span>Nauman Saleem</span></li>
                                         <li class="mb-1"><span>Address :</span> <span>Karachi, Pakistan</span></li>
-                                        <li class="mb-1"><span>Experience :</span> <span>2+ years</span></li>
+                                        <li class="mb-1"><span>Experience :</span> <span>4+ years</span></li>
                                         <li class="mb-1"><span>Freelance :</span> <span>Available</span></li>
                                     </ul>
                                     <ul class="float-right w-60 pl-2">
@@ -320,11 +321,11 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                 <div class="skill-item">
-                                    <p class="skill-name">HTML & CSS</p>
+                                    <p class="skill-name">HTML, CSS & SCSS</p>
                                     <div id="html"></div>
                                 </div>
                                 <div class="skill-item mt-4">
-                                    <p class="skill-name">SCSS</p>
+                                    <p class="skill-name">Odoo Websites</p>
                                     <div id="css"></div>
                                 </div>
                                 <div class="skill-item mt-4">
@@ -340,20 +341,22 @@
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                 <div class="skill-item mt-4 mt-lg-0">
+                                    <p class="skill-name">ReactJS</p>
+                                    <div id="php"></div>
+
+                                </div>
+                                <div class="skill-item mt-4">
+                                    <p class="skill-name">Angular</p>
+                                    <div id="angular"></div>
+
+                                </div>
+                                <div class="skill-item mt-4">
                                     <p class="skill-name">WordPress</p>
                                     <div id="wordpress"></div>
                                 </div>
                                 <div class="skill-item mt-4">
                                     <p class="skill-name">Github</p>
                                     <div id="jquery"></div>
-                                </div>
-                                <div class="skill-item mt-4">
-                                    <p class="skill-name">ReactJS</p>
-                                    <div id="php"></div>
-                                </div>
-                                <div class="skill-item mt-4">
-                                    <p class="skill-name">Web Development</p>
-                                    <div id="web-development"></div>
                                 </div>
                             </div>
                         </div>
@@ -514,7 +517,22 @@
                     <!-- End Row -->
                     <!-- Row -->
                     <div class="row row-items portfolio-container project-gallery-item">
+                        <div
+                            class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive filter-ecommerce">
+                            <a href="https://leofren.netlify.app/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/leofren6.png" class="img-fluid" alt="Portfolio 3" />
+                                    <div
+                                        class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Corporate Theme</h4>
+                                            <p>Website for a Software House </p>
 
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                         <div
                             class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive filter-ecommerce">
                             <a href="https://suits24.netlify.app/" target="_blank">
@@ -1124,7 +1142,7 @@
             <!-- Container -->
             <div class="container">
                 <!-- Copyright -->
-                <p class="copyright text-center">&copy; 2022 <a href="https://github.com/NaumanSaleem22"
+                <p class="copyright text-center">&copy; 2024 <a href="https://github.com/NaumanSaleem22"
                         target="_blank">Nauman</a> &nbsp; - &nbsp; All rights reserved.</p>
                 <!-- End Copyright -->
             </div>
