--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="banner-inner d-flex align-items-center justify-content-center">
                         <!-- Banner Image -->
                         <div class="banner-img mb-4 mb-lg-0">
-                            <img class="img-fluid center-picture" src="assets/images/Nauman Portfolio.png"
+                            <img class="img-fluid center-picture" src="https://media.licdn.com/dms/image/v2/D4D03AQH0HN73cIaSEw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1723549021479?e=1730937600&v=beta&t=C_ISc8etCdgv4uNU4Dfq6HSd5G6gPpcf7zsav-ldsZk"
                                 alt="Profile" />
                         </div>
                         <!-- End Banner Image -->
