--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                         ReactJS, NextJS and Wordpress. Using these technologies,
                                         I have developed responsive webpages, landing pages, Responsive and different
                                         interactive webpages. </p>
-                                    <a class="mb-4 mb-lg-0 btn btn-primary" href="./nauman_cv.pdf"
+                                    <a class="mb-4 mb-lg-0 btn btn-primary" href="./Nauman's Resume April 2024.pdf"
                                         download="nauman_cv"><span><i class="fa fa-download mr-2"></i>Download my
                                             cv</span></a>
                                 </div>
@@ -552,7 +552,7 @@
 
                         <div
                             class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive filter-ecommerce">
-                            <a href="https://qa.sastatareen.pk/" target="_blank">
+                            <a href="" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/sastatreen.png" class="img-fluid" alt="Portfolio 3" />
                                     <div
@@ -847,7 +847,7 @@
                         </div>
                         <div
                             class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-ecommerce">
-                            <a href="https://bababeard.com/" target="_blank">
+                            <a href="" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/bababeard.png" class="img-fluid" alt="Portfolio 1" />
                                     <div
